crates/synth-kicad/tests/snapshots/golden__every_ir_fixture_exports_deterministically@docs_blocks__project.snap
---
source: crates/synth-kicad/tests/golden.rs
expression: project
---
{
  "board": {
    "design_settings": {
      "defaults": {
        "min_clearance": 0.127,
        "min_copper_edge_clearance": 0.3,
        "min_hole_clearance": 0.2,
        "min_through_hole_diameter": 0.3,
        "min_track_width": 0.127,
        "min_via_annular_width": 0.13,
        "min_via_diameter": 0.56
      },
      "rules": {
        "min_clearance": 0.127,
        "min_copper_edge_clearance": 0.3,
        "min_hole_clearance": 0.2,
        "min_through_hole_diameter": 0.3,
        "min_track_width": 0.127,
        "min_via_annular_width": 0.13,
        "min_via_diameter": 0.56
      }
    }
  },
  "boards": [],
  "meta": {
    "filename": "docs_blocks.kicad_pro",
    "uuid": "8a48da60-ee2e-5682-9d62-9b88d66c2f1a",
    "version": 1
  },
  "net_settings": {
    "classes": [
      {
        "bus_width": 12,
        "clearance": 0.2,
        "diff_pair_gap": 0.25,
        "diff_pair_via_gap": 0.25,
        "diff_pair_width": 0.2,
        "line_style": 0,
        "microvia_diameter": 0.3,
        "microvia_drill": 0.1,
        "name": "Default",
        "pcb_color": "rgba(0, 0, 0, 1.000)",
        "priority": 2147483647,
        "schematic_color": "rgba(0, 0, 0, 1.000)",
        "track_width": 0.2,
        "via_diameter": 0.6,
        "via_drill": 0.4,
        "wire_width": 6
      }
    ],
    "meta": {
      "version": 4
    },
    "net_colors": null,
    "netclass_assignments": null,
    "netclass_patterns": []
  },
  "schematic": {
    "annotate_start_num": 0,
    "drawing": {},
    "variants": []
  },
  "sheets": [
    [
      "d1e532b5-9e23-5ba8-9608-1e655b7fd141",
      ""
    ]
  ]
}
