crates/synth-kicad/tests/snapshots/golden__every_ir_fixture_exports_deterministically@docs_blocks__schematic.snap
---
source: crates/synth-kicad/tests/golden.rs
expression: schematic
---
(kicad_sch
	(version 20260306)
	(generator "synth-eda")
	(generator_version "10.0")
	(uuid "d1e532b5-9e23-5ba8-9608-1e655b7fd141")
	(paper "A4")
	(title_block
		(title "docs_blocks")
		(date "")
		(rev "")
		(company "")
		(comment 1 "Generated by synth-eda")
		(comment 2 "4 components / 5 nets")
	)
	(lib_symbols
		(symbol "Device:C"
		(pin_numbers
			(hide yes)
		)
		(pin_names
			(offset 0.254)
		)
		(exclude_from_sim no)
		(in_bom yes)
		(on_board yes)
		(in_pos_files yes)
		(duplicate_pin_numbers_are_jumpers no)
		(property "Reference" "C"
			(at 0.635 2.54 0)
			(show_name no)
			(do_not_autoplace no)
			(effects
				(font
					(size 1.27 1.27)
				)
				(justify left)
			)
		)
		(property "Value" "C"
			(at 0.635 -2.54 0)
			(show_name no)
			(do_not_autoplace no)
			(effects
				(font
					(size 1.27 1.27)
				)
				(justify left)
			)
		)
		(property "Footprint" ""
			(at 0.9652 -3.81 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "Datasheet" ""
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "Description" "Unpolarized capacitor"
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "ki_keywords" "cap capacitor"
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "ki_fp_filters" "C_*"
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(symbol "C_0_1"
			(polyline
				(pts
					(xy -2.032 0.762) (xy 2.032 0.762)
				)
				(stroke
					(width 0.508)
					(type default)
				)
				(fill
					(type none)
				)
			)
			(polyline
				(pts
					(xy -2.032 -0.762) (xy 2.032 -0.762)
				)
				(stroke
					(width 0.508)
					(type default)
				)
				(fill
					(type none)
				)
			)
		)
		(symbol "C_1_1"
			(pin passive line
				(at 0 3.81 270)
				(length 2.794)
				(name ""
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
				(number "1"
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
			)
			(pin passive line
				(at 0 -3.81 90)
				(length 2.794)
				(name ""
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
				(number "2"
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
			)
		)
		(embedded_fonts no)
	)
		(symbol "Connector_Generic:Conn_01x04"
		(pin_names
			(offset 1.016)
			(hide yes)
		)
		(exclude_from_sim no)
		(in_bom yes)
		(on_board yes)
		(in_pos_files yes)
		(duplicate_pin_numbers_are_jumpers no)
		(property "Reference" "J"
			(at 0 5.08 0)
			(show_name no)
			(do_not_autoplace no)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "Value" "Conn_01x04"
			(at 0 -7.62 0)
			(show_name no)
			(do_not_autoplace no)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "Footprint" ""
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "Datasheet" ""
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "Description" "Generic connector, single row, 01x04, script generated (kicad-library-utils/schlib/autogen/connector/)"
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "ki_keywords" "connector"
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "ki_fp_filters" "Connector*:*_1x??_*"
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(symbol "Conn_01x04_1_1"
			(rectangle
				(start -1.27 3.81)
				(end 1.27 -6.35)
				(stroke
					(width 0.254)
					(type default)
				)
				(fill
					(type background)
				)
			)
			(rectangle
				(start -1.27 2.667)
				(end 0 2.413)
				(stroke
					(width 0.1524)
					(type default)
				)
				(fill
					(type none)
				)
			)
			(rectangle
				(start -1.27 0.127)
				(end 0 -0.127)
				(stroke
					(width 0.1524)
					(type default)
				)
				(fill
					(type none)
				)
			)
			(rectangle
				(start -1.27 -2.413)
				(end 0 -2.667)
				(stroke
					(width 0.1524)
					(type default)
				)
				(fill
					(type none)
				)
			)
			(rectangle
				(start -1.27 -4.953)
				(end 0 -5.207)
				(stroke
					(width 0.1524)
					(type default)
				)
				(fill
					(type none)
				)
			)
			(pin passive line
				(at -5.08 2.54 0)
				(length 3.81)
				(name "Pin_1"
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
				(number "1"
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
			)
			(pin passive line
				(at -5.08 0 0)
				(length 3.81)
				(name "Pin_2"
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
				(number "2"
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
			)
			(pin passive line
				(at -5.08 -2.54 0)
				(length 3.81)
				(name "Pin_3"
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
				(number "3"
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
			)
			(pin passive line
				(at -5.08 -5.08 0)
				(length 3.81)
				(name "Pin_4"
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
				(number "4"
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
			)
		)
		(embedded_fonts no)
	)
		(symbol "Device:R_US"
		(pin_numbers
			(hide yes)
		)
		(pin_names
			(offset 0)
		)
		(exclude_from_sim no)
		(in_bom yes)
		(on_board yes)
		(in_pos_files yes)
		(duplicate_pin_numbers_are_jumpers no)
		(property "Reference" "R"
			(at 2.54 0 90)
			(show_name no)
			(do_not_autoplace no)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "Value" "R_US"
			(at -2.54 0 90)
			(show_name no)
			(do_not_autoplace no)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "Footprint" ""
			(at 1.016 -0.254 90)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "Datasheet" ""
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "Description" "Resistor, US symbol"
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "ki_keywords" "R res resistor"
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "ki_fp_filters" "R_*"
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(symbol "R_US_0_1"
			(polyline
				(pts
					(xy 0 2.286) (xy 0 2.54)
				)
				(stroke
					(width 0)
					(type default)
				)
				(fill
					(type none)
				)
			)
			(polyline
				(pts
					(xy 0 2.286) (xy 1.016 1.905) (xy 0 1.524) (xy -1.016 1.143) (xy 0 0.762)
				)
				(stroke
					(width 0)
					(type default)
				)
				(fill
					(type none)
				)
			)
			(polyline
				(pts
					(xy 0 0.762) (xy 1.016 0.381) (xy 0 0) (xy -1.016 -0.381) (xy 0 -0.762)
				)
				(stroke
					(width 0)
					(type default)
				)
				(fill
					(type none)
				)
			)
			(polyline
				(pts
					(xy 0 -0.762) (xy 1.016 -1.143) (xy 0 -1.524) (xy -1.016 -1.905) (xy 0 -2.286)
				)
				(stroke
					(width 0)
					(type default)
				)
				(fill
					(type none)
				)
			)
			(polyline
				(pts
					(xy 0 -2.286) (xy 0 -2.54)
				)
				(stroke
					(width 0)
					(type default)
				)
				(fill
					(type none)
				)
			)
		)
		(symbol "R_US_1_1"
			(pin passive line
				(at 0 3.81 270)
				(length 1.27)
				(name ""
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
				(number "1"
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
			)
			(pin passive line
				(at 0 -3.81 90)
				(length 1.27)
				(name ""
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
				(number "2"
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
			)
		)
		(embedded_fonts no)
	)
	)
	(symbol
		(lib_id "Connector_Generic:Conn_01x04")
		(at 55.88 25.4 0)
		(unit 1)
		(in_bom yes)
		(on_board yes)
		(uuid "f412ac33-0983-5f1a-bf83-fca27df723b4")
		(property
			"Reference"
			"J1"
			(at 55.88 17.78 0)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property
			"Value"
			"(no value)"
			(at 55.88 33.02 0)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property
			"Footprint"
			"Connector_PinHeader_2.54mm:PinHeader_1x04_P2.54mm_Vertical"
			(at 55.88 25.4 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"Datasheet"
			""
			(at 55.88 25.4 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"MPN"
			""
			(at 55.88 25.4 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"LCSC"
			""
			(at 55.88 25.4 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
	)
	(symbol
		(lib_id "Device:R_US")
		(at 116.84 25.4 90)
		(unit 1)
		(in_bom yes)
		(on_board yes)
		(uuid "b6f751e4-bd26-59d9-8524-93279b2eda38")
		(property
			"Reference"
			"R1"
			(at 116.84 20.86 0)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property
			"Value"
			"(no value)"
			(at 116.84 29.94 0)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property
			"Footprint"
			"Resistor_SMD:R_0603_1608Metric"
			(at 116.84 25.4 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"Datasheet"
			""
			(at 116.84 25.4 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"MPN"
			""
			(at 116.84 25.4 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"LCSC"
			""
			(at 116.84 25.4 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
	)
	(symbol
		(lib_id "Device:R_US")
		(at 116.84 96.52 90)
		(unit 1)
		(in_bom yes)
		(on_board yes)
		(uuid "01bf6786-fad2-5ee2-8903-e575002bc1f7")
		(dnp yes)
		(property
			"Reference"
			"R2"
			(at 116.84 91.98 0)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property
			"Value"
			"(no value)"
			(at 116.84 101.06 0)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property
			"Footprint"
			"Resistor_SMD:R_0603_1608Metric"
			(at 116.84 96.52 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"Datasheet"
			""
			(at 116.84 96.52 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"MPN"
			""
			(at 116.84 96.52 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"LCSC"
			""
			(at 116.84 96.52 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
	)
	(symbol
		(lib_id "Device:C")
		(at 25.4 27.94 90)
		(unit 1)
		(in_bom yes)
		(on_board yes)
		(uuid "aefbe1f8-a609-544b-84b4-35c4740dbe72")
		(property
			"Reference"
			"C1"
			(at 25.4 23.4 0)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property
			"Value"
			"(no value)"
			(at 25.4 32.48 0)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property
			"Footprint"
			"Capacitor_SMD:C_0603_1608Metric"
			(at 25.4 27.94 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"Datasheet"
			""
			(at 25.4 27.94 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"MPN"
			""
			(at 25.4 27.94 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"LCSC"
			""
			(at 25.4 27.94 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
	)
	(wire
		(pts
			(xy 50.8 22.86)
			(xy 46.99 22.86)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "0e30eb6b-6ecb-5c06-a2b4-53fcbd787a16")
	)
	(wire
		(pts
			(xy 46.99 22.86)
			(xy 46.99 11.43)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "501bb28e-cf6e-5807-8dec-0abd11aa6b74")
	)
	(wire
		(pts
			(xy 46.99 11.43)
			(xy 113.03 11.43)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "1f1eff38-0e40-5166-99c4-115a2994fcf2")
	)
	(wire
		(pts
			(xy 113.03 11.43)
			(xy 113.03 25.4)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "13d0f7b5-d14f-502a-9c25-49d2514808f5")
	)
	(wire
		(pts
			(xy 50.8 27.94)
			(xy 48.26 27.94)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "c56c2daf-dc97-5926-92e6-719b813ae7a2")
	)
	(wire
		(pts
			(xy 48.26 27.94)
			(xy 48.26 34.29)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "78e24b96-f459-560f-a6ab-145fcb33ce2c")
	)
	(wire
		(pts
			(xy 48.26 34.29)
			(xy 113.03 34.29)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "cd0ede80-80c7-5d37-b876-a077c325ca17")
	)
	(wire
		(pts
			(xy 113.03 34.29)
			(xy 113.03 96.52)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "46c99406-98d2-5cb3-8662-f7d0bc56f1a6")
	)
	(wire
		(pts
			(xy 120.65 96.52)
			(xy 124.46 96.52)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "39be00f6-bd7f-52bc-ba01-77a294d3b2c2")
	)
	(wire
		(pts
			(xy 124.46 96.52)
			(xy 124.46 107.95)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "c955624d-2cde-5701-8f2b-dca227bea54e")
	)
	(wire
		(pts
			(xy 124.46 107.95)
			(xy 50.8 107.95)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "531bc829-6a90-596e-8ddb-6e2839485ce1")
	)
	(wire
		(pts
			(xy 50.8 107.95)
			(xy 50.8 30.48)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "dcfab05c-3a79-5d7a-a172-b96c7532f04a")
	)
	(wire
		(pts
			(xy 120.65 25.4)
			(xy 125.73 25.4)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "ea2fad9d-1e93-5dd5-a0bb-7acb95d7e7ec")
	)
	(label
		"P2_R1"
		(at 125.73 25.4 0)
		(effects
			(font
				(size 1.27 1.27)
			)
		)
		(uuid "5c561a74-3aed-53af-be65-936734d0e2f5")
	)
	(wire
		(pts
			(xy 21.59 27.94)
			(xy 16.51 27.94)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "f97b460c-9151-5f01-a243-ce313e889410")
	)
	(label
		"P2_R1"
		(at 16.51 27.94 180)
		(effects
			(font
				(size 1.27 1.27)
			)
		)
		(uuid "f6c3330e-a0df-59d1-b456-c419cdb587a8")
	)
	(wire
		(pts
			(xy 50.8 25.4)
			(xy 45.72 25.4)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "283652e7-0a13-5626-94d8-920be29b08ea")
	)
	(label
		"P2"
		(at 45.72 25.4 180)
		(effects
			(font
				(size 1.27 1.27)
			)
		)
		(uuid "8f2f231f-cad6-575f-a5b8-59af510b121f")
	)
	(wire
		(pts
			(xy 29.21 27.94)
			(xy 34.29 27.94)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "8358e72f-ad51-5a5f-adb9-e610979e6f3c")
	)
	(label
		"P2"
		(at 34.29 27.94 0)
		(effects
			(font
				(size 1.27 1.27)
			)
		)
		(uuid "0828e7fe-ac33-5549-9ba5-f40fe414d5c0")
	)
	(text
		"Input"
		(at 25.4 22.13 0)
		(effects
			(font
				(size 2 2)
				bold
			)
			(justify left bottom)
		)
		(uuid "b25da116-5bfe-5187-9603-bc51b4d8719c")
	)
	(text
		"Input notes"
		(at 25.4 39.75 0)
		(effects
			(font
				(size 2 2)
			)
			(justify left bottom)
		)
		(uuid "d0be1802-fa2e-5960-8582-215460d0aaff")
	)
	(text
		"Keep leads short."
		(at 25.4 43.75 0)
		(effects
			(font
				(size 1 1)
			)
			(justify left bottom)
		)
		(uuid "126196bb-4737-5fab-8c1c-f84d79f9115f")
	)
	(text
		"Build"
		(at 20 115.95 0)
		(effects
			(font
				(size 2 2)
			)
			(justify left bottom)
		)
		(uuid "782dd9cf-e9e0-541b-aa76-f635f6acac50")
	)
	(text
		"Assemble at JLCPCB."
		(at 20 119.95 0)
		(effects
			(font
				(size 1 1)
			)
			(justify left bottom)
		)
		(uuid "3eda6c41-e404-5a85-ba0e-aeba5fac1a6f")
	)
	(rectangle
		(start 20.4 19.13)
		(end 30.4 48.75)
		(stroke
			(width 0.254)
			(type dash)
			(color 139 69 19 1)
		)
		(fill
			(type color)
			(color 139 69 19 0.08)
		)
		(uuid "72f86672-d111-5503-9946-64a7ba145b92")
	)
)
